# koharu

./: .editorconfig  .env  .env.example  .gitattributes  .gitignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  COMPREHENSIVE_FIX.md  Cargo.toml  DETECTION_ANALYSIS.md  DETECT_REVIEW.md  EXPORT_CONSISTENCY_STATUS.md  EXPORT_DEBUG.md  EXPORT_FIX_SUMMARY.md  FINAL_STATUS.md  FIXES_APPLIED.md  FUTURE_FEATURES.md  IMPROVE_TEXT.md  INPAINTING_REVIEW.md  INPAINTING_SPEC.md  OCR_ANALYSIS.md  PIPELINE.md  README.md  RENDER_REFORMED.md  RUST_COMPILATION_FIXED.md  RUST_EXPORT_INTEGRATION.md  RUST_IMPLEMENTATION_COMPLETE.md  TEXT_RENDERING_FIX.md  TODO.md  TRANSLATION-SUCCESS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build.yaml  ocr-validation.yml  publish.yaml  release.yaml  web.yaml
PaddleOCR-3.2.0/: .gitignore
candle-yolo-v8/: Cargo.toml
candle-yolo-v8/src/: main.rs
comic-text-detector/: Cargo.toml
comic-text-detector/src/: lib.rs  main.rs
detection/: detection.ipynb
docs/: CANVAS_API_FIXES.md  COMPREHENSIVE_FIX.md  COORDINATE_SYSTEM_FIX.md  CRITICAL_DIAGNOSIS.md  DIAGNOSIS.md  KONVA_EXPORT_FIX.md  PHASE3-4-IMPLEMENTATION.md  PIPELINE.md  RECTANGLE_FIX.md  RUST_RENDERING_PLAN.md  SUMMARY.md  ZOOM_CRITICAL_FIX.md  ZOOM_FINAL_FIX.md  ZOOM_IMPROVEMENTS_V2.md  ZOOM_OPTIMIZATION_CHANGES.md  ZoomAnalysis.md  ZoomPerformanceTesting.md
lama/: .gitignore  Cargo.toml
lama/src/: lib.rs  main.rs
manga-ocr/: Cargo.toml
manga-ocr/benches/: ocr_benchmark.rs
manga-ocr/src/: lib.rs  main.rs
next/: next.config.ts  package.json  tsconfig.json
next/app/: globals.css  layout.tsx  page.tsx
next/app/(app)/: layout.tsx  page.tsx
next/app/settings/: page.tsx
next/app/splashscreen/: page.tsx
next/components/: batch-panel.tsx  canvas.tsx  detection-controls.tsx  detection-panel.tsx  gpu-status-panel.tsx  inpaint-panel.tsx  inpaint-settings.tsx  ocr-panel.tsx  render-customization.tsx  render-panel.tsx  scale-control.tsx  settings-dialog.tsx  splashscreen.tsx  tools.tsx  topbar.tsx  translation-panel.tsx
next/hooks/: image-loader.ts  inpaint-loader.ts  segment-loader.ts
next/inference/: detection.ts  inpaint.ts  ocr.ts
next/lib/: batch-runner.ts  batch-state.ts  batch-types.ts  detection.ts  image.ts  inpaint.ts  ocr.ts  stage.ts  state.ts
next/lib/hooks/: useImageLoader.ts  useInpaintLoader.ts  useWindowSize.ts
next/lib/utils/: imageUtils.ts
next/types/: tauri.d.ts
next/utils/: alpha-compositing.ts  appearance-analysis.ts  color-extraction.ts  font-sizing.ts  image.ts  improved-font-sizing.ts  konva-text-render.ts  layout-classification.ts  model.ts  translation.ts  wcag-contrast.ts  zoom-performance.ts
scripts/: ctd_inference.py  download_bluearchive_comics.py  export_LaMa_to_onnx.ipynb  export_manga_ocr_to_onnx.py  inference_inpaint_onnx.py  manga109_yolo.py  manga_ocr_onnx_inference.py  paperspace_free_a100.ts  test_batch.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.cuda.conf.json  tauri.windows.ci.conf.json  tauri.windows.conf.json
src-tauri/assets/fonts/: README.md
src-tauri/benches/: ocr_benchmark.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: accuracy.rs  comic_text_detector.rs  commands.rs  error.rs  hot_reload.rs  lama.rs  lib.rs  main.rs  manga_ocr.rs  model_package.rs  ocr_config.rs  ocr_pipeline.rs  state.rs  text_renderer.rs  vertical_text_tests.rs
src-tauri/src/commands/: render.rs
src/components/: canvas.tsx  detection-panel.tsx  layer-panel.tsx  stage-provider.tsx  tools.tsx  topbar.tsx
src/lib/: state.ts  storage.ts
web/: next.config.ts  package.json
web/app/: layout.tsx
web/app/(app)/: layout.tsx
web/app/settings/: page.tsx
web/components/: canvas.tsx  detection-panel.tsx  ocr-panel.tsx  tools.tsx  topbar.tsx  translation-panel.tsx
web/hooks/: inpaint-loader.ts  segment-loader.ts
web/inference/: detection.ts  inpaint.ts  ocr.ts
web/lib/: detection.ts  image-loader.ts  image.ts  inpaint-loader.ts  inpaint.ts  limit.ts  ocr.ts  segment-loader.ts  state.ts
web/util/: model.ts
web/utils/: image.ts
yolo-v8/: Cargo.toml
yolo-v8/src/: main.rs  model.rs
