[workspace]
members = ["comic-text-detector", "lama", "manga-ocr"]
resolver = "3"

[workspace.package]
version = "0.1.2"
edition = "2024"
description = "Manga translator"
license-file = "LICENSE"

[workspace.dependencies]
candle-transformers = "0.9.1"
hf-hub = "0.4.2"
image = "0.25.6"
ort = "=2.0.0-rc.9"
anyhow = "1.0.98"
ndarray = "0.16.1"
imageproc = "0.25.0"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
log = "0.4.27"
wasm-bindgen = "0.2.100"
