[workspace]
members = ["comic-text-detector", "lama", "manga-ocr", "src-tauri"]
resolver = "3"

[workspace.package]
version = "0.1.11"
edition = "2024"
description = "Manga translator"
license-file = "LICENSE"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[workspace.dependencies]
candle-transformers = "0.9.1"
hf-hub = "0.4.2"
image = "0.25.6"
ort = "=2.0.0-rc.10"
anyhow = "1.0.98"
ndarray = "0.16.1"
imageproc = "0.25.0"
clap = { version = "4.5.38", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-fs = "2"
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.44.2", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
log = "0.4.27"
wasm-bindgen = "0.2.100"
