[package]
name = "candle-yolo-v8"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.29"
anyhow = "1.0.97"
candle-core = "0.8.4"
candle-examples = "0.8.4"
candle-nn = "0.8.4"
candle-transformers = "0.8.4"
clap = { version = "4.5.36", features = ["derive"] }
hf-hub = "0.4.2"
image = "0.25.6"
imageproc = "0.25.0"
tracing = "0.1.41"
tracing-chrome = "0.7.2"
tracing-subscriber = "0.3.19"
