[package]
name = "comic-text-detector"
version = "0.1.0"
edition = "2024"

[dependencies]
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
image = { workspace = true }
ort = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
imageproc = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
