[package]
name = "comic-text-detector"
version.workspace = true
edition.workspace = true

[dependencies]
candle-transformers = { workspace = true }
hf-hub = { workspace = true }
image = { workspace = true }
ort = { workspace = true }
anyhow = { workspace = true }
ndarray = { workspace = true }
imageproc = { workspace = true }
serde = { workspace = true }
clap = { workspace = true }
