[package]
name = "koharu"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "koharu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
tauri-plugin-opener = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-persisted-scope = { workspace = true }
tauri-plugin-store = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-fs = { workspace = true }
