[package]
name = "koharu"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "koharu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-persisted-scope = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
tauri-plugin-fs = { workspace = true }
ort = { workspace = true }
tracing-subscriber = { workspace = true }
tauri-plugin-dialog = { workspace = true }

# internal dependencies
comic-text-detector = { path = "../comic-text-detector" }
manga-ocr = { path = "../manga-ocr" }
lama = { path = "../lama" }

[features]
cuda = ["ort/cuda"]
default = ["cuda"]
