[package]
name = "koharu"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "koharu_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-persisted-scope = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
log = { workspace = true }
tauri-plugin-fs = { workspace = true }
ort = { workspace = true }
tracing-subscriber = { workspace = true }
tauri-plugin-dialog = { workspace = true }
image = { workspace = true }
imageproc = { workspace = true }
font-kit = { workspace = true }
ab_glyph = "0.2"  # Text rendering for export (compatible with imageproc)
glyph_brush_layout = "0.2"  # Proper text layout with kerning for accurate measurement
wgpu = "0.19"
nvml-wrapper = { version = "0.10", optional = true }
reqwest = { workspace = true }
notify = "6.1"  # File watching for hot-reload
tokio-stream = "0.1"  # Stream utilities for debouncing
futures = "0.3"  # Future utilities
sha2 = "0.10"  # SHA-256 checksums for model validation
unicode-segmentation = "1.10"  # Text segmentation for CER/WER calculation
ndarray = "0.15"  # N-dimensional arrays for tensor operations
async-trait = "0.1"  # Async traits

# internal dependencies
comic-text-detector = { path = "../comic-text-detector" }
manga-ocr = { path = "../manga-ocr" }
lama = { path = "../lama" }

[features]
cuda = ["ort/cuda", "nvml-wrapper"]
directml = ["ort/directml"]
default = ["cuda"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.8"
tokio-test = "0.4"

[[bench]]
name = "ocr_benchmark"
harness = false
